# LiteEngine

./: .clang-format  .format.sh  .gitignore  .gitmodules  CMakeLists.txt  GameSuite.sln  LICENSE  PIXL.sln  PXL.sln  README.md  format.sh
GameApp/: CMakeLists.txt  Game.cpp  Game.h  GameApp.vcxproj  Main.cpp  main.cpp
GameSystem/: CMakeLists.txt  GameSystem.h  GameSystem.vcxproj  GameSystem.vcxproj.filters  pch.h
GameSystem/Core/: Application.cpp  CMakeLists.txt  Core.cpp  EntryPoint.h  Logger.cpp  Logger.h  Utility.h  Window.cpp  Window.h  game-app.h
GameSystem/Core/Application/: Application.cpp  Application.h  CMakeLists.txt  CoreApplication.cpp  CoreApplication.h  EntryPoint.h  GameApp.h  PrecisionClock.cpp  PrecisionClock.h  Window.cpp
GameSystem/Core/Application/Clock/: CMakeLists.txt  Clock.cpp  Clock.h  WinClock.cpp  WinClock.h
GameSystem/Core/Application/Platform/Windows/: WinWindow.cpp  WinWindow.h
GameSystem/Core/Application/Window/: CMakeLists.txt  LinuxWindow.cpp  LinuxWindow.h  WinWindow.cpp  WinWindow.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
GameSystem/Core/Input/: CMakeLists.txt  InputSystem.cpp  InputSystem.h  WinInput.cpp  WinInput.h
GameSystem/Core/Platform/Windows/: WinWindow.cpp
GameSystem/Core/Utils/: CMakeLists.txt  Logger.cpp  Utility.h
GameSystem/Core/logging/: CMakeLists.txt  logger.cpp
GameSystem/EventSystem/: Event.h  MouseEvent.h
GameSystem/core/: CMakeLists.txt
LiteBox/: CMakeLists.txt  LiteBox.cpp  LiteBox.h  Main.cpp
LiteEngine/: CMakeLists.txt
LiteEngine/Assets/: CMakeLists.txt
LiteEngine/Assets/Shaders/: shader.slang
LiteEngine/Core/: CMakeLists.txt
LiteEngine/Core/Application/: Application.cpp  Application.h  CMakeLists.txt
LiteEngine/Core/Camera/: CMakeLists.txt  Camera.h  OrbitCamera.cpp  OrbitCamera.h
LiteEngine/Core/Logging/: CMakeLists.txt  Logger.cpp  Logger.h
LiteEngine/Core/Vulkan/: Assets.cpp  Assets.h  Buffers.cpp  Buffers.h  CMakeLists.txt  Config.h  Context.cpp  Context.h  Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h
LiteEngine/Core/Window/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h  Window.cpp  Window.h
LiteEngine/Include/: CMakeLists.txt  LiteEngine.h  iLiteBox.h
PIXL/: GameSystem.h  PIXL.vcxproj  PIXL.vcxproj.filters
PIXL/Core/: Application.cpp  EntryPoint.h  PrecisionClock.cpp  Utility.h  Window.h
PIXL/Core/Platform/Windows/: WinWindow.h
PIXL/src/: GameSystem.h  PIXL.cpp  PIXL.h  pch.h  pixlpch.cpp  pixlpch.h
PIXL/src/GameSystem/: Application.cpp  Application.h  Logger.cpp  Logger.h  PrecisionClock.cpp  Window.cpp  Window.h
PIXL/src/GameSystem/Platform/Windows/: WinWindow.cpp  WinWindow.h
PIXL/src/PIXL/: Application.cpp  Application.h  Core.h  EntryPoint.h  EventSystem.cpp  EventSystem.h  GameApp.h  Logger.cpp  Logger.h  PIXLSample.cpp  PIXLSample.h  PrecisionClock.cpp  PrecisionClock.h  Utility.h  WinApplication.cpp  WinApplication.h  Window.cpp  Window.h
PIXL/src/PIXL/Platform/Windows/: WinWindow.cpp  WinWindow.h
PXL/: PXL.vcxproj
PXL/src/: PXL.cpp  PXL.h
Sample/: Main.cpp  Sample.vcxproj  Sample.vcxproj.filters
Sample/src/: Main.cpp  Sample.cpp  Sample.h  stdafx.h
game-app/: CMakeLists.txt  game.cpp  game.h  main.cpp
game-system/: CMakeLists.txt  pch.h
game-system/Assets/: CMakeLists.txt
game-system/Assets/shaders/: CMakeLists.txt
game-system/Core/: CMakeLists.txt
game-system/Core/Application/: Application.cpp  Application.h
game-system/Core/Graphics/: CMakeLists.txt  VulkanBase.cpp  VulkanBase.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h
game-system/Core/Logging/: CMakeLists.txt  Logger.cpp  Logger.h
game-system/Core/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanSwapChain.h
game-system/Core/Window/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h
game-system/Include/: CMakeLists.txt  IGame.h  game-app.h  game-system.h
game-system/assets/: CMakeLists.txt
game-system/core/: CMakeLists.txt  game-system.cpp  game-system.h
game-system/core/Application/: Application.cpp  CMakeLists.txt
game-system/core/Graphics/: VulkanBase.cpp  VulkanContext.cpp  VulkanContext.h  VulkanDevice.h
game-system/core/app/: CMakeLists.txt  app.cpp  app.h
game-system/core/logging/: logger.h
game-system/core/vulkan/: CMakeLists.txt  GraphicsPipeline.cpp  GraphicsPipeline.h  vulkan-core.cpp  vulkan-core.h  vulkan-debug.cpp  vulkan-debug.h  vulkan-utils.cpp  vulkan-utils.h
game-system/core/window/: CMakeLists.txt  window.cpp  window.h
hooks/: pre-commit
